kubernetes/infrastructure/vault/vault-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault
  namespace: vault
spec:
  ingressClassName: nginx
  rules: 
    - host: vault.314vko
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: vault
                port:
                  number: 8200
